--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.1",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "animation.css": "^0.1.0",
+    "css-loader": "^6.6.0",
     "mdb-react-ui-kit": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-loading-skeleton": "^3.0.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-slider-modal": "^1.3.1",
     "react-slideshow-image": "^3.7.0",
+    "react-toastify": "^8.2.0",
+    "reactjs-popup": "^2.0.5",
+    "redux": "^4.1.2",
+    "stylus": "^0.56.0",
+    "stylus-loader": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
