--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.4.1",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "animation.css": "^0.1.0",
+    "bootstrap": "^5.1.3",
     "css-loader": "^6.6.0",
     "mdb-react-ui-kit": "^2.3.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.10.0",
+    "react-multiple-select-dropdown-lite": "^2.0.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
